const mongoose = require('mongoose')
const autopopulate = require('mongoose-autopopulate')
const orderSchema = require('./order')

const tourSchema = new mongoose.Schema({
  company: { type: mongoose.Schema.Types.ObjectId, ref: 'LogisticCompany', required: true },
  vehicleId: { type: mongoose.Schema.Types.ObjectId, ref: 'Vehicle', default: null, autopopulate: true },
  date: { type: Date, required: true },
  startLocation: { type: String, required: true },
  endLocation: { type: String, required: true },
  orders: [{ type: mongoose.Schema.Types.ObjectId, ref: 'Order', autopopulate: true }],
  state: { type: String, enum: ['STARTED', 'PLANNED', 'CANCELLED', 'FINISHED'] },
})

tourSchema.methods.addOrder = function (orderId) {
  this.orders.push(orderId)
  return this.save()
}

tourSchema.methods.assignVehicle = function (vehicleId) {
  this.vehicleId = vehicleId
  return this.save()
}

tourSchema.methods.startTour = function () {
  this.state = 'STARTED'
  return this.save()
}

tourSchema.methods.endTour = function () {
  this.state = 'FINISHED'
  return this.save()
}

tourSchema.plugin(autopopulate)

module.exports = mongoose.model('Tour', tourSchema)
